# gex

./: .rustfmt.toml  CHANGELOG  Cargo.toml  LICENSE  README.md  TODO  TODO.md
src/: addon.rs  api.rs  api_url.rs  args.rs  async_func.rs  browser.rs  cli.rs  config.rs  configurable.rs  core.rs  database.rs  errors.rs  extension.rs  flags.rs  install.rs  main.rs  manifest.rs  profile.rs  progress_bar.rs  query.rs  traits.rs
src/addon/: addon.rs  addons.rs  authors.rs  compatibility.rs  contributions_url.rs  current_version.rs  default_locale.rs  description.rs  file.rs  homepage.rs  install_telemetry_info.rs  license.rs  mod.rs  name.rs  preview.rs  promoted.rs  ratings.rs  recommendation_state.rs  response.rs  score.rs  url.rs  weekly_downloads.rs
src/addons_json_database/: addon.rs  addons_json_database.rs
src/cli/: cli.rs  configuration.rs  mod.rs  operation.rs
src/configuration/: browser.rs  configuration.rs  database.rs  intermediate_database.rs  mod.rs  profile.rs
src/database/: addon.rs  database.rs  identifier.rs  install_telemetry_info.rs  manifest.rs  mod.rs  permissions.rs
src/database/addon/: locale_file.rs  permissions.rs  target_application.rs
src/database/addons_json/: addon.rs  addons_json.rs  mod.rs
src/database/addons_json/addon/: addon.rs  contribution_url.rs  creator.rs  mod.rs  screenshot.rs
src/database/addons_json_database/: addon.rs  addons_json_database.rs  mod.rs
src/database/extensions_json/: addon.rs  extensions_json.rs  mod.rs
src/database/extensions_json/addon/: addon.rs  default_locale.rs  install_telemetry_info.rs  locales.rs  mod.rs  permissions.rs  persistent_listeners.rs  request.rs  startup_data.rs  target_application.rs  web_request.rs
src/database/extensions_json_database/: extensions_json_database.rs
src/database/extensions_json_database/addon/: addon.rs  install_telemetry_info.rs  message.rs  permissions.rs  recommendation_state.rs  target_application.rs
src/database/manifest/: manifest.rs
src/database/manifest_database/: manifest.rs  manifest_database.rs  mod.rs
src/database/manifests/: applications.rs  gecko.rs  manifest.rs  manifests.rs  mod.rs
src/extension/: authors.rs  creation_date.rs  current_version.rs  description.rs  extension.rs  extensions_list.rs  file.rs  license.rs  mod.rs  name.rs  ratings.rs  score.rs  url.rs  weekly_downloads.rs
src/extensions_json_database/: extensions_json_database.rs  mod.rs
src/extensions_json_database/addon/: locale.rs  mod.rs  permissions.rs  target_application.rs
src/flags/: browser.rs  configurable.rs  delete.rs  extensions.rs  flags.rs  install.rs  list.rs  log.rs  mod.rs  profile.rs  runnable.rs  search.rs  update.rs  verbose.rs
src/manifest/: browser_specific_settings.rs  gecko.rs  manifest.rs  mod.rs
src/operation/: api.rs  configurable.rs  delete.rs  install.rs  list.rs  mod.rs  operation.rs  remove.rs  search.rs  update.rs
src/traits/: configurable.rs  crud.rs  deserializeable.rs  mod.rs  runnable.rs  serializeable.rs
