[package]
name = "gex"
version = "0.0.1"
edition = "2021"
authors = [ "Bojan Milevski <bojan@bojanmilevski.com>" ]
description = "Addon manager for Gecko-based browsers"
readme = "README.md"
keywords = [ "firefox", "extensions" ]
categories = [ "command-line-utilities" ]
license = "GPL-v3.0"
repository = "https://github.com/bojanmilevski/gex"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[dependencies]
anyhow = "1.0.82"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3.11", features = ["derive"] }
colored = "2.0.4"
futures-util = "0.3.30"
home = "0.5.9"
indicatif = "0.17.7"
log = "0.4.21"
reqwest = { version = "0.11.18", features = ["json", "stream"] }
rust-ini = "0.19.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["macros", "fs", "rt-multi-thread"] }
url = { version = "2.5.0", features = ["serde"] }
zip = "0.6.6"
