[package]
name = "gex"
version = "0.0.1"
edition = "2024"
authors = [ "Bojan Milevski <bojan@bojanmilevski.com>" ]
description = "Addon manager for Gecko-based browsers"
readme = "README.md"
keywords = [ "firefox", "extensions" ]
categories = [ "command-line-utilities" ]
license = "GPL-v3.0"
repository = "https://github.com/bojanmilevski/gex"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = true

[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
futures-util = "0.3.31"
home = "0.5.11"
indicatif = "0.17.11"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
rust-ini = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["macros", "fs", "rt-multi-thread"] }
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.15.1", features = ["v4"] }
zip = "2.2.3"
